# nirvana10k

./: .gitignore  README.md  pyproject.toml  requirements.txt
nirvana10k/: __init__.py  core.py
nirvana10k/examples/: 251210_173817_pollux_oospec_multipos_line_scan.h5  analyze_sample_example.py  calculate_absorbance.py
nirvana10k/measurements/: __init__.py  uvvis.py
nirvana10k/read/: __init__.py  h5tosample.py
nirvana10k/utils/: plotting.py
