[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nirvana10k"
description = "Analysis of UV-Vis spectroscopy data from Nirvana tool measurements"
readme = "README.md"
authors = [
    {name = "roncofaber", email = "fabrice.roncoroni@gmail.com"}
]
license = {text = "MIT"}
keywords = ["spectroscopy", "uv-vis", "hdf5", "analysis", "nirvana"]
dynamic = ["version"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"
dependencies = [
    "h5py>=3.7.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/roncofaber/nirvana10k"
Repository = "https://github.com/roncofaber/nirvana10k"
Documentation = "https://github.com/roncofaber/nirvana10k#readme"
"Bug Tracker" = "https://github.com/roncofaber/nirvana10k/issues"

[tool.setuptools]
packages = ["nirvana10k", "nirvana10k.read", "nirvana10k.measurements"]

[tool.setuptools.package-data]
"nirvana10k.examples" = ["*.h5"]

[tool.setuptools.dynamic]
version = {attr = "nirvana10k.__version__"}